--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "ftp": "0.1.1",
-    "expresso": "0.9.2"
+    "mocha": "latest",
+    "should": "latest"
   },
   "repository": "git://github.com/publicclass/open-uri.git",
   "keywords": ["open", "uri", "open-uri"],
