--- a/package.json
+++ b/package.json
@@ -3,18 +3,48 @@
   "description": "Asynchronous Open URI, a CommonJS module inspired by Rubys Open-URI library.",
   "homepage": "http://github.com/publicclass/open-uri",
   "version": "0.4.1",
-  "author": "Robert Sköld <robert@publicclass.se>",
+  "author": {
+    "name": "Robert Sköld",
+    "email": "robert@publicclass.se"
+  },
   "dependencies": {
     "addressable": "0.3.3",
     "mime": "1.2.5"
   },
   "devDependencies": {
     "ftp": "0.1.1",
-    "mocha": "latest",
-    "should": "latest"
+    "expresso": "0.9.2"
   },
-  "repository": "git://github.com/publicclass/open-uri.git",
-  "keywords": ["open", "uri", "open-uri"],
-  "scripts": { "test": "expresso test/test-open-uri.js" },
-  "engines": { "node": ">= 0.3.6" }
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/publicclass/open-uri.git"
+  },
+  "keywords": [
+    "open",
+    "uri",
+    "open-uri"
+  ],
+  "scripts": {
+    "test": "expresso test/test-open-uri.js"
+  },
+  "engines": {
+    "node": ">= 0.3.6"
+  },
+  "_npmUser": {
+    "name": "david",
+    "email": "david@adaltas.com"
+  },
+  "_id": "open-uri@0.4.1",
+  "optionalDependencies": {},
+  "_engineSupported": true,
+  "_npmVersion": "1.1.9",
+  "_nodeVersion": "v0.6.13",
+  "_defaultsLoaded": true,
+  "dist": {
+    "shasum": "48308c8e94e1acfbe72dd59f9534a7aa49488917"
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "_from": "open-uri@0.4.1"
 }
